# blinkid-flutter

BlinkID/: .gitignore
BlinkID/android/: CMakeLists.txt  build.gradle
BlinkID/android/gradle/wrapper/: gradle-wrapper.properties
BlinkID/android/src/main/cpp/: native-lib.cpp
BlinkID/android/src/main/java/com/microblink/flutter/: MicroblinkFlutterPlugin.java
BlinkID/lib/: microblink_scanner.dart
